# DocuMindREN

./: .env.example  .gitignore  .vercelignore  README.md  documind_main.py  env.template  pyproject.toml  render.yaml  requirements-clean.txt  requirements.txt  simple_main.py
services/: cloud_vector_service.py
